fix(button): prevent separator overlap on focus shadow

--- a/packages/components/src/components/button/_button.scss
+++ b/packages/components/src/components/button/_button.scss
@@ -37,6 +37,10 @@
     }
   }
 
+  .#{$prefix}--btn-set .#{$prefix}--btn:focus + .#{$prefix}--btn {
+    box-shadow: inherit;
+  }
+
   .#{$prefix}--btn-set--stacked
     .#{$prefix}--btn:not(:first-of-type):not(:focus) {
     box-shadow: 0 rem(-1px) 0 0 $button-separator;
